# nixi-clock

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
drawings/: box_rear.SLDPRT  box_rear.STEP  box_top.SLDPRT  box_top.STEP  in4.dwg
firmware/: build.rs
firmware/.cargo/: config.toml
firmware/src/: lib.rs  main.rs  parser.rs
hardware/: nixie_clock.DsnWrk
hardware/kicad/: main.kicad_sch  nixie_clock_cpu.kicad_prl  nixie_clock_cpu.kicad_pro  nixie_clock_cpu.kicad_sch  nixie_clock_hv.kicad_prl  nixie_clock_hv.kicad_pro  nixie_clock_hv.kicad_sch  supply.kicad_sch  tube.kicad_sch
hardware/nixie_clock/: Drawing.OutJob  Gerber.OutJob  Pdf.OutJob  main.SchDoc  nixie_clock.Annotation  nixie_clock.PrjPcb  nixie_clock.PrjPcbStructure  summary.SchDoc  tube.SchDoc
hardware/nixie_clock_adapter/: Assembly.OutJob  Gerber.OutJob  main.SchDoc  nixie_clock.PrjPcbStructure  nixie_tube_adapter.PrjPcb
hardware/nixie_clock_cpu/: Assembly-1.2.OutJob  Assembly.OutJob  Drawing.OutJob  Gerber-1.2.OutJob  Gerber.OutJob  Pdf-1.0.OutJob  main.SchDoc  nixie_clock_cpu.PrjPcb  summary.SchDoc
hardware/nixie_clock_holder/: Assembly.OutJob  Drawing.OutJob  Gerber.OutJob  develer_2L_Ax_panel.PcbDoc  main.SchDoc  nixie_clock_holder.PrjPcb  nixie_clock_holder.PrjPcbStructure  summary.SchDoc
hardware/nixie_clock_hv/: Assembly-1.2.OutJob  Drawing-1.0.OutJob  Pdf-1.0.OutJob  nixie_clock.BomDoc  nixie_clock_hv.Annotation  nixie_clock_hv.PrjPcb  nixie_clock_hv.PrjPcbStructure  summary.SchDoc  supply.SchDoc  tube.SchDoc
src/: lib.rs  main.rs  parser.rs  proto_parser.rs
(+94 files in other folders)
